# py-mmd-tools

./: .gitignore  CHANGELOG.md  Dockerfile.coverage  Dockerfile.tests  Dockerfile.unittests  MANIFEST.in  README.md  Vagrantfile  codecov.yml  coverage-tests.sh  docker-compose.coverage.yml  docker-compose.tests.yml  docker-compose.unittests.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  run_unittests.sh  setup.cfg  setup.py  tests-coverage.sh  tests.sh
.github/: pull_request_template.md
.github/workflows/: coverage.yml  python-app.yml  python-app_new.yml  syntax.yml  tagpr.yml  tests.yml  unittests.yml
py_mmd_tools/: __init__.py  acdd_elements.yaml  adc_elements.yaml  cf_elements.yaml  check_mmd.py  config.py  log_util.py  mmd_elements.yaml  mmd_operations.py  mmd_to_acdd.py  mmd_to_adc.py  mmd_to_csw_iso.py  mmd_to_nc.py  mmd_util.py  nc_to_mmd.py  odajson_to_mmd.py  test_mmd_to_iso.py  test_odajson_to_mmd.py  tests_mmd_to_csw-iso.py  xml2xml.py  xml_translate.py  xml_util.py  xml_utils.py  yaml_to_adoc.py
py_mmd_tools/script/: README.md  check_nc.py  mmd2acdd.py  move_data.py  nc2mmd.py  ncheader2json.py
py_mmd_tools/templates/: mmd_template.xml  nc_attributes_template.adoc
scr/: README.md  mmd2iso-csw.py  odajson_to_mmd.py
script/: README.md  checkMMD.py  check_MMD  check_MMD.py  check_nc  check_nc.py  mmd2iso-csw.py  mmd2nc.py  nc2mmd.py  nc_to_mmd  nc_to_mmd.py  oda_to_mmd.py  odajson_to_mmd.py  xmlconverter.py  yaml2adoc  yaml2adoc.py
scripts/: README.md  mmd2iso-csw.py
templates/: mmd_template.xml  oda_default.yml  oda_to_mmd_template.xml
test/: README.md  test_mmd_to_iso.py  tests_mmd_to_csw-iso.py
tests/: README.md  conftest.py  test_check_mmd.py  test_check_nc.py  test_log_util.py  test_mmd2nc_script.py  test_mmd_operations.py  test_mmd_to_acdd.py  test_mmd_to_iso.py  test_mmd_to_nc.py  test_mmd_yaml_vs_xsd.py  test_move_data_script.py  test_nc2mmd_script.py  test_nc_to_mmd.py  test_ncheader2json.py  test_odajson_to_mmd.py  test_xml2xml.py  test_xml_translate.py  test_xml_util.py  test_yaml2adoc.py
tests/data/: hashes.md5  json_invalid_element.json  mmd-to-csw.xsl  mmd-to-iso.xsl  mmd.xsd  mmd_strict.xsd  mmdv2-to-mmdv3.xsl  nc_to_update.nc  not_a_valid_mmd.xml  not_a_valid_xml.xml  reference.withextradot_nc.nc  reference_iso.xml  reference_json.json  reference_mmd.xml  reference_mmd_from_json.xml  reference_nc.nc  reference_nc.xml  reference_nc_attrs_multiple.nc  reference_nc_attrs_multiple_and_contributor.nc  reference_nc_attrs_multiple_mixed_creator.nc  reference_nc_fail.nc  reference_nc_gcmd_platform.nc  reference_nc_header.json  reference_nc_header_missing_title.json  reference_nc_id_missing.nc  reference_nc_id_not_uuid.nc  reference_nc_malformed_project.nc  reference_nc_missing_attrs.nc  reference_nc_missing_collection.nc  reference_nc_missing_keywords_vocab.nc  reference_nc_missing_project.nc  reference_nc_missing_rectangle.nc  reference_nc_missing_spatial_repr.nc  reference_nc_non_cf_standard_name.nc  reference_nc_platform_names_missing.nc  reference_nc_project_with_short_name.nc  reference_nc_with_altID.nc  reference_nc_with_altID_multiple.nc
tests/data/2024/09/01/: reference_nc.nc
tests/data/dodsC/: reference_nc.nc
