[metadata]
name = py_mmd_tools
version = attr: py_mmd_tools.__version__
author = MET Norway
author_email = servicedesk@met.no
description = Python tools and module for py-mmd-tools
url = https://github.com/metno/py-mmd-tools
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
license = Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
python_requires = >=3.6
project_urls =
    Source Code = https://github.com/metno/py-mmd-tools

install_requires = ['filehash', 'jinja2',
                    'lxml==4.5', 'netCDF4>=1.5,<=1.6', 
                    'numpy', 'pandas', 'parmap',
                    'python-dateutil', 'pyyaml', 'requests', 'wget',
                    'xmltodict']
[bdist_wheel]
universal = 0

[flake8]
ignore = E203,E221,E226,E241,E251,E261,E266,E302,E305
max-line-length = 99
